--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   path_provider: ^2.1.3
   archive: ^3.5.0
-
+  file_picker: ^8.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
